// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimePicker /> create time picker 1`] = `
<div
  id="myTime"
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id="myTime-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            id="myTime-input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm:ss"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              id="myTime-button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 2`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm:ss am/pm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 3`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 4`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm:ss"
            readOnly={true}
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch is-disabled fd-input-group__button"
              disabled={true}
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 5`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm:ss am/pm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 6`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm:ss am/pm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 7`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:mm:ss am/pm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 8`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="mm:ss"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 9`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="mm:ss am/pm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 10`] = `
<div
  onChange={[Function]}
>
  <div
    className="fd-popover"
    id=""
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="hh:ss am/pm"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              aria-controls="rthHR811"
              aria-expanded="false"
              aria-haspopup="true"
              className="fd-button fd-button--transparent sap-icon--fob-watch fd-input-group__button"
              type="button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
